<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tela_principal"
    tools:context="com.example.italo.gestante.Reset_Password_Gestante">

    <include android:id="@+id/toolbar"
        layout="@layout/toolbrar"/>


<RelativeLayout
    android:layout_below="@+id/toolbar"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/frase"
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frase_reset"
        android:textColor="@color/branca"
        android:textSize="25sp"
        android:textAlignment="center"
        android:textStyle="bold"
        />

    <android.support.design.widget.TextInputLayout

        android:layout_marginTop="50dp"
        android:layout_below="@+id/frase"
        android:id="@+id/reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#cccccc">

        <EditText
            android:id="@+id/enviarEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/branca"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/branca" />

    </android.support.design.widget.TextInputLayout>



    <Button
        android:layout_below="@+id/reset_email"
        android:id="@+id/btnconfTrocaSenhaGt"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_custon"
        android:textColor="@color/branca"
        android:textStyle="bold"
        android:text="@string/reset_senha"
        tools:ignore="NotSibling" />

</RelativeLayout>






</RelativeLayout>
